2014-08-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ofonts.test: Fix parallel tests.

2014-08-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tests/arabic.ovp: Use more than 64k ligkern steps.
	* tests/liguse{,1,2}.opl (new): Additional test data.
	* ligkern.test, am/omegaware.am: Add the new test data.

2014-08-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ovp2ovf.web: Correctly handle bchar_label (as in opl2ofm.web).

	* ofm2opl.web, ovf2ovp.{ch,web}: Treat infinite ligature loop
	as non-fatal.

	* ligkern.test, tests/lig{all,bch,bdy,blb}.opl,
	tests/ligblv.{opl,ovp}, tests/ligloop1.{ofm,opl},
	tests/ligloop2.opl: Shell script and data for a new test.
	* am/omegaware.am: Add the new test.

2014-08-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ofm2opl.{ch,web}, ovf2ovp.{ch,web}, yannis.test: Fixed a bug
	when checking for ligature loops.
	* opl2ofm.(ch,web}, ovp2ovf.{ch,web}: No 64-bit arg1 of f().

2014-08-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* yannis.test, tests/arabicr.pl, tests/arabic.ovp (new):
	Shell script and data for a new test.
	* am/omegaware.am: Add the new test.

2014-08-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* level1.opl, repeat.opl, repeated.opl, sample.ovp: Always use
	computed checksum.

2014-08-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* shorten.test, tests/shorten.opl (new): Shell script and data
	for a new test.
	* am/omegaware.am: Add the new test.

2014-07-31  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* opl2ofm.web, ovp2ovf.web: Fixed a bug in computation of lf.
	* opl2ofm.{ch,web}: Adapted (more) to PLtoTF Version 3.6.
	* ovp2ovf.{ch,web}: Adapted (more) to VPtoVF Version 1.6.

2014-07-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/omegaware.am: Drop Automake conditional OMFONTS.
	Always build and test wofm2opl&Co (instead of ofm2opl&Co).
	* level1.test, ofonts.test, omfonts.test, overbmp.test,
	realnum.test, repeat.test, selectfont.test, specialhex.test:
	Adapted.